force-app/main/default/objects/VoiceCall/fields/IntegrationPayload__c.field-meta.xml
<CustomField>
    <fullName>IntegrationPayload__c</fullName>
    <label>Integration Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>