force-app/main/default/objects/VoiceCall/fields/InteractionId__c.field-meta.xml
<CustomField>
    <fullName>InteractionId__c</fullName>
    <externalId>true</externalId>
    <label>Interaction ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>