force-app/main/default/objects/VoiceCall/fields/Journey_Phase__c.field-meta.xml
<CustomField>
    <fullName>Journey_Phase__c</fullName>
    <label>Journey Phase</label>
    <length>100</length>
    <type>Text</type>
</CustomField>