force-app/main/default/objects/VoiceCall/fields/Needs_Manual_Match__c.field-meta.xml
<CustomField>
    <fullName>Needs_Manual_Match__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Manual Match</label>
    <type>Checkbox</type>
</CustomField>