force-app/main/default/objects/VoiceCall/fields/Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Name__c</fullName>
    <label>Queue Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>