force-app/main/default/objects/VoiceCall/fields/TTEC_Segment__c.field-meta.xml
<CustomField>
    <fullName>TTEC_Segment__c</fullName>
    <label>TTEC Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>